<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/Title"
                android:layout_width="match_parent"
                android:layout_height="190dp" android:id="@+id/Title" android:textSize="30sp"
                android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:typeface="sans"/>
        <TextView
                android:text="@string/key_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/Key_lable" android:textSize="24sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/keyInput" android:inputType="text" android:hint="@string/KeyInputHint"
                android:autofillHints=""/>
        <Button
                android:text="@string/connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/connectButton"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/poweredeliasulimanov"
                android:id="@+id/poweredByEliaSulimanovLogo"
                android:contentDescription="@string/poweredbyeliasulimanovlogo"
        />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>